--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ import Testimonials from "../components/Testimonials.astro";
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width" />
-	<title>WhizKid Rezepte | Die intuitive Koch-App für Kinder</title>
+	<title>Kiko Rezepte | Die intuitive Koch-App für Kinder</title>
 	<meta name="description" content="Kochen ohne Waage und Zahlen. Unsere App ermöglicht es Kindern, durch Farben und Symbole selbstständig und sicher zu kochen." />
 </head>
 
